<resources>
    <string name="app_name">Traxy</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_email">Enter email</string>
    <string name="traxy_logo">Traxy Logo</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="email_requirred">Email requierd</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="login_verified">Login Verified</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="title_activity_sign_up">Create Account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="verify_password">Verify Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="empty_password">Password is required</string>
    <string name="unmatch_password">Passwords must match</string>
    <string name="incorrect_password">Incorrrect Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_journal_view">JournalViewActivity</string>
    <string name="audio_icon">Audio</string>
    <string name="video_icon">Video</string>
    <string name="camera_icon">Camera</string>
    <string name="photo_icon">Photo</string>
    <string name="edit_icon">Text</string>
    <string name="date_range">%1$s to %2$s</string>
</resources>